# aria2lib

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  fix_mingw32_size_max.diff  version.script
.github/patches/: openssl-mingwarm64.patch
.github/workflows/: _build-common.yaml  build.yaml  release.yaml
cmake/: linux-aarch64.cmake  llvm-mingw-aarch64.cmake  llvm-mingw-x64.cmake  musl-aarch64.cmake  musl-x86_64.cmake
src/: aria2_c_api.cpp  aria2_c_api.h  itm_stub.c  itm_stub_tm.cpp  main.cpp
